@@ -1594,6 +1594,8 @@ code {
 
 <p><strong>button_config</strong> | <code>point</code> | Position of the 'Configuration' button. The button will be hidden if not defined.</p>
 
+<p><strong>default_zoom_level</strong> | <code>int</code> | Zoom level of the map when viewed at "1x". By default, this is 1, which equates to each tile being 1 pixel tall.</p>
+
 <hr />
 
 <h4>MenuMovementType</h4>
